Atualização de alguns métodos